tests/snapshots/regression_families__fit_bccg.snap
---
source: tests/regression_families.rs
expression: "fit_and_snapshot_with_data(&BCCG::new(), &y, &data)"
---
converged: true
coefficients:
  mu:
    - "-1.7906e-2"
    - "1.0244e0"
  nu:
    - "4.9800e-1"
  sigma:
    - "-1.6430e0"
edf:
  mu: "2.0000e0"
  nu: "1.0000e0"
  sigma: "1.0000e0"
log_likelihood: "-5.2580e1"
aic: "1.1316e2"
