tests/snapshots/regression_families__fit_bct.snap
---
source: tests/regression_families.rs
expression: "fit_and_snapshot_with_data(&BCT::new(), &y, &data)"
---
converged: false
coefficients:
  mu:
    - "-3.7577e-2"
    - "1.0593e0"
  nu:
    - "-1.0368e-3"
  sigma:
    - "-1.6342e0"
  tau:
    - "1.9157e0"
edf:
  mu: "2.0000e0"
  nu: "1.0000e0"
  sigma: "1.0000e0"
  tau: "1.0000e0"
log_likelihood: "-8.7260e1"
aic: "1.8452e2"
