tests/snapshots/regression_families__fit_beta.snap
---
source: tests/regression_families.rs
expression: "fit_and_snapshot(&Beta::new(), &y, &x)"
---
converged: true
coefficients:
  mu:
    - "-1.0277e0"
    - "1.6331e0"
  phi:
    - "5.6201e0"
edf:
  mu: "2.0000e0"
  phi: "1.0000e0"
log_likelihood: "1.2718e2"
aic: "-2.4837e2"
