tests/snapshots/regression_families__fit_censored_gaussian.snap
---
source: tests/regression_families.rs
expression: "fit_and_snapshot(&family, &y, &x)"
---
converged: true
coefficients:
  mu:
    - "1.1186e0"
    - "1.9118e0"
  sigma:
    - "-1.4489e0"
edf:
  mu: "2.0000e0"
  sigma: "1.0000e0"
log_likelihood: "-1.0461e1"
aic: "2.6922e1"
