tests/snapshots/regression_families__fit_ocat.snap
---
source: tests/regression_families.rs
expression: "fit_and_snapshot(&Ocat::new(4), &y, &x)"
---
converged: true
coefficients:
  delta_1:
    - "3.9168e-1"
  delta_2:
    - "2.1222e0"
  delta_3:
    - "1.7695e0"
  mu:
    - "-4.0003e0"
    - "2.5075e1"
edf:
  delta_1: "1.0000e0"
  delta_2: "1.0000e0"
  delta_3: "1.0000e0"
  mu: "2.0000e0"
log_likelihood: "-2.3024e1"
aic: "5.6047e1"
